[package]
name = "transfile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitflags = "2.6.0"
clap = { version = "4.5.21", features = ["derive", "env"] }
endianness = "0.2.0"
log = "0.4.22"
sha2 = "0.10.8"
simple_logger = "5.0.0"
tokio = { version = "1.41.1", features = ["macros"] }
zerocopy = { version = "0.8.10", features = ["alloc", "derive", "std", "zerocopy-derive", "simd"] }
